Correção de erro na classe MessageProvider